--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,14 +1,34 @@
 {
-  "name": "@chaos/cli",
+  "name": "@oalacea/chaosui",
   "version": "0.1.0",
-  "description": "CLI to add chaos components to your project",
+  "description": "Glitch, noise, and distortion components for React. Copy-paste like shadcn.",
   "type": "module",
   "bin": {
-    "chaos": "./bin/cli.js"
+    "chaos-ui": "./bin/cli.js",
+    "chaosui": "./bin/cli.js"
   },
   "files": [
-    "bin"
+    "bin",
+    "components"
   ],
+  "keywords": [
+    "react",
+    "components",
+    "glitch",
+    "noise",
+    "distortion",
+    "ui",
+    "effects",
+    "css",
+    "animation"
+  ],
+  "author": "Oalacea",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Pamacea/chaos.git"
+  },
+  "homepage": "https://github.com/Pamacea/chaos",
   "dependencies": {
     "commander": "^12.0.0",
     "picocolors": "^1.0.0",
